--- a/app/index.html
+++ b/app/index.html
@@ -5,10 +5,22 @@
     <title>My HTML File</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body>
-
-    <p>Nothing here {{'yet' + '!'}}</p>
-
+    <ul>
+		  <li>
+		    <span>Nexus S</span>
+		    <p>
+		      Fast just got faster with Nexus S.
+		    </p>
+		  </li>
+		  <li>
+		    <span>Motorola XOOM™ with Wi-Fi</span>
+		    <p>
+		      The Next, Next Generation tablet.
+		    </p>
+		  </li>
+		</ul>
   </body>
 </html>
