--- a/app/index.html
+++ b/app/index.html
@@ -1,26 +1,36 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="phonecatApp">
   <head>
     <meta charset="utf-8">
     <title>My HTML File</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
+    <script src="app.js"></script>
     <link rel="stylesheet" href="app.css" />
   </head>
-  <body>
-    <ul>
-		  <li>
-		    <span>Nexus S</span>
-		    <p>
-		      Fast just got faster with Nexus S.
-		    </p>
-		  </li>
-		  <li>
-		    <span>Motorola XOOM™ with Wi-Fi</span>
-		    <p>
-		      The Next, Next Generation tablet.
-		    </p>
-		  </li>
-		</ul>
+  <body ng-controller="PhoneListController">
+	  <ul>
+	    <li ng-repeat="phone in phones">
+	      <span>{{phone.name}}</span>
+	      <p>{{phone.snippet}}</p>
+	      <p>Total number of phones: {{phones.length}}</p>
+	      <p>Hello, {{name}}!</p>
+	    </li>
+	  </ul>
+
+	  <table>
+		  <tr><th>Row number</th></tr>
+		  <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td>{{i + 1}}</td></tr>
+		</table>
+		<table>
+			    <tr>
+		        <th ng-repeat="i in [0,1,2,3,4,5,6,7]">Column: {{i}}</th>
+			    </tr>
+			    <tr ng-repeat="i in [0,1,2,3,4,5,6,7]">
+			        <td ng-repeat="j in [0,1,2,3,4,5,6,7]">
+			            [{{i}},{{j}}]
+			        </td>
+			    </tr>
+		</table>
   </body>
 </html>
