--- a/app/index.html
+++ b/app/index.html
@@ -6,31 +6,10 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <script src="bower_components/angular/angular.js"></script>
     <script src="app.js"></script>
+    <script src="phone-list.component.js"></script>
     <link rel="stylesheet" href="app.css" />
   </head>
-  <body ng-controller="PhoneListController">
-	  <ul>
-	    <li ng-repeat="phone in phones">
-	      <span>{{phone.name}}</span>
-	      <p>{{phone.snippet}}</p>
-	      <p>Total number of phones: {{phones.length}}</p>
-	      <p>Hello, {{name}}!</p>
-	    </li>
-	  </ul>
-
-	  <table>
-		  <tr><th>Row number</th></tr>
-		  <tr ng-repeat="i in [0, 1, 2, 3, 4, 5, 6, 7]"><td>{{i + 1}}</td></tr>
-		</table>
-		<table>
-			    <tr>
-		        <th ng-repeat="i in [0,1,2,3,4,5,6,7]">Column: {{i}}</th>
-			    </tr>
-			    <tr ng-repeat="i in [0,1,2,3,4,5,6,7]">
-			        <td ng-repeat="j in [0,1,2,3,4,5,6,7]">
-			            [{{i}},{{j}}]
-			        </td>
-			    </tr>
-		</table>
+  <body>
+	  <phone-list></phone-list>
   </body>
 </html>
