--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,12 @@
     <meta charset="utf-8">
     <title>My HTML File</title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="app.js"></script>
-    <script src="phone-list.component.js"></script>
     <link rel="stylesheet" href="app.css" />
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="app.module.js"></script>
+    <script src="phone-list/phone-list.module.js"></script>
+    <script src="phone-list/phone-list.component.js"></script>
+
   </head>
   <body>
 	  <phone-list></phone-list>
